--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,4 +8,7 @@
 @import 'mixin';
 
 // ButtonCSS
-@import '../components/Button/style'
+@import '../components/Button/style';
+
+// Menu
+@import '../components/Menu/style';
