--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -50,11 +50,11 @@
     }
   }
   .robuta-submenu {
-    display: none;
+    // display: none;
     list-style:none;
     padding-left: 0;
     white-space: nowrap;
-    transition: $menu-transition;
+    // transition: $menu-transition;
     .menu-item {
       padding: $menu-item-padding-y $menu-item-padding-x;
       cursor: pointer;
@@ -65,9 +65,9 @@
       }
     }
   }
-  .robuta-submenu.menu-opened {
-    display: block;
-  }
+  // .robuta-submenu.menu-opened {
+  //   // display: block;
+  // }
 }
 .menu-horizontal {
   >.menu-item {
