菜单，动画，图标组件增加文档说明

--- a/src/styles/_infoTable.scss
+++ b/src/styles/_infoTable.scss
@@ -1,7 +1,8 @@
 .info-table {
-  border-collapse:separate;
+  border-collapse: separate;
   tr th,
   td {
-    border: 1px solid black;
+    padding: 4px;
+    border: 1px solid gray;
   }
 }
