新增input组件，为input增加story，修复font不出现问题

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,4 +19,8 @@
 // Icon
 @import '../components/Icon/style';
 
-@import 'infoTable'
+// 修改文档表格样式
+@import 'infoTable';
+
+// Input
+@import '../components/Input/style';
