完善alert组件样式，新增alert组件测试用例

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -34,6 +34,11 @@
     }
 }
 
+@mixin alert-color($background, $color) {
+    color: $color;
+    background-color: $background;
+  }
+
 @mixin zoom-animation($direction: "top", $scaleStart: scaleY(0), $scaleEnd: scaleY(1), $origin: center top) {
     .zoom-in-#{$direction}-enter {
         opacity: 0;
