--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,4 +28,8 @@
 // autoComplete
 @import '../components/AutoComplete/style';
 
-@import '../components/Alert/style'
+//Alert
+@import '../components/Alert/style';
+
+//Tabs
+@import '../components/Tabs/style';
