eslint 修复警告，优化package.json 发布顺序，增加npm相关信息

--- a/src/components/Tabs/_style.scss
+++ b/src/components/Tabs/_style.scss
@@ -53,7 +53,7 @@
 .tabs-content {
   padding: $tabs-content-padding-y $tabs-content-padding-x;
   display: none;
-  &.tabs-conent-active {
+  &.tabs-content-active {
     display: block;
   }
 }
